<resources>
    <string name="app_name">TMSHW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fit">Fit!</string>
    <string name="wont_fit">Will not fit!</string>
    <string name="task1">1. Если число А четное, то прибавить B, иначе умножить на B</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="equals">=</string>
    <string name="accept">accept</string>
    <string name="task3">3. Определить оценку студента по его рейтингу</string>
    <string name="r">R</string>
    <string name="dec">Dec</string>
    <string name="ans3">Твоя оценка:</string>
    <string name="task2">2. Max (abc, a+b+c)</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="max">MAX</string>
    <string name="task4">4. Вложить конверт AB в конверт CD</string>
    <string name="insert">Insert</string>
    <string name="task5">5. Сумма четных чисел с 1..99:</string>
    <string name="task52">Количество четных чисел в 1..99:</string>
    <string name="task6">6.</string>
    <string name="task62">in Bin:</string>
    <string name="main_text">MainTest</string>
    <string name="play">Playing…</string>
    <string name="stop">Stop play.</string>

    <string name="farmer1">Farmer 1</string>
    <string name="farmer2">Farmer 2</string>
    <string name="farmer3">Farmer 3</string>
    <string name="add_person">Add</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="history">History</string>
    <string name="start">START</string>
    <string name="stop_btn">STOP</string>
    <string name="pause_btn">Pause</string>
    <string name="pause_tv">Pause...</string>
    <string name="enter_name">Введите имя</string>
    <string name="employee">Сотрудники</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="department">Департамент</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="position">Должность</string>
    <string name="update">Update</string>
    <string name="sensor_light">Нормы освещенности для рабочих мест</string>
    <string name="_100">Подземные проходы, подвалы - до 100Лк</string>
    <string name="_150">Пути движения и коридоры, склады и кладовые - 150Лк</string>
    <string name="_200">Столовые, буфеты, туалеты, ванные комнаты - 200Лк</string>
    <string name="_300">Грубая работа, подготовка материалов и общие работы на машинах, детские комнаты, компьютерные классы - 300Лк</string>
    <string name="_500">Точные работы, помещения для точных измерений, лаборатории, комнаты медицинского осмотра, фармацевтическое производство, парикмахерские, учебные классы, рабочие места кухни, столы для чтения - 500Лк</string>
    <string name="_750">Контроль, шлифовка, гравировка, полировка, раскрой, отделка, обработка поверхности, ремонт, изостудии, чертежные классы - 750Лк</string>
    <string name="_1000">Тонкие работы, в т.ч. ручная роспись, контроль цвета, изготовление ювелирных изделий, лечение(и обследование) - 1000Лк</string>
    <string name="_1500">Изготовление и обработка драгоценных камней, производство испытание и контроль электронной техники - 1500Лк</string>

</resources>