<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".tasks.SensorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sensor_light"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_100"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_150"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_150"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_200"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_300"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_500"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_750"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_750"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_1000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/_1000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_1500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/_1500"
        android:textSize="16sp" />

    <TextView

        android:id="@+id/tv_sensor_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>